[MOB-896] Updated UI for billing address

--- a/app/src/main/res/layout-land/fragment_billing_address_top_up.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address_top_up.xml
@@ -153,6 +153,18 @@
             android:layout_marginEnd="@dimen/big_margin"
             >
 
+          <TextView
+              android:id="@+id/title"
+              style="@style/BillingAddress.Title"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Billing Address"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintHorizontal_bias="0"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              />
+
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/address_layout"
               style="@style/BillingTextInputLayout"
@@ -163,7 +175,7 @@
               android:hint="Address"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintTop_toBottomOf="@id/title"
               >
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/address"
