--- a/app/src/main/res/layout-land/fragment_billing_address.xml
+++ b/app/src/main/res/layout-land/fragment_billing_address.xml
@@ -115,6 +115,7 @@
 
       <TextView
           android:id="@+id/title"
+          style="@style/BillingAddress.Title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/big_margin"
@@ -128,8 +129,7 @@
       <ScrollView
           android:id="@+id/scroll_content"
           android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:fillViewport="true"
+          android:layout_height="216dp"
           android:overScrollMode="never"
           android:scrollbars="none"
           app:layout_constraintEnd_toEndOf="parent"
